# meta-ad-optimizer

./: .dockerignore  .gitattributes  .gitignore  AdMarket_Arena_Hackathon.pptx  DOCUMENTATION.md  README.md  __init__.py  auction.py  baseline.py  blog_post.md  campaign_state.py  client.py  competitors.py  curriculum_scheduler.py  gym_wrapper.py  inference.py  models.py  openenv.yaml  oversight.py  pyproject.toml  simulation.py  summarizer.py  tasks.py  train_grpo.ipynb  train_oversight.ipynb  training_callbacks.py  violation_injector.py
results/: oversight_eval_smoke.json
scripts/: advertiser_eval.py  collect_oversight_trajectories.py  make_plots.py  oversight_eval.py
server/: Dockerfile  ad_environment.py  app.py  arena_env.py  arena_rubrics.py  requirements.txt  rubrics.py
tests/: conftest.py  test_advertiser_training.py  test_environment.py  test_oversight.py
